base/apps/mesh-lab/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: hello
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: hashicorp/http-echo:0.2.3
        args: ["-text=hello-v1"]
        ports:
        - containerPort: 5678
  strategy:
    canary:
      # Will be set by env overlays
      stableService: ""
      canaryService: ""
      trafficRouting:
        istio:
          virtualService:
            name: hello
            routes:
            - http
      steps:
      - setWeight: 10
      - pause: {duration: 30s}
      - setWeight: 25
      - pause: {duration: 30s}
      - setWeight: 50
      - pause: {duration: 30s}
      - setWeight: 100
