base/apps/mesh-lab/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-stable
spec:
  selector:
    app: hello
    rollouts-pod-template-hash: stable
  ports:
  - name: http
    port: 80
    targetPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: hello-canary
spec:
  selector:
    app: hello
    rollouts-pod-template-hash: canary
  ports:
  - name: http
    port: 80
    targetPort: 5678
